<resources>
    <string name="app_name">HERide Partner</string>
    <string name="app_name_withoutSpace">HERide_Partner</string>
    <string name="facebook_app_id">1111066805703978</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading&#8230;</string>
    <string name="logging_out">Logging out&#8230;</string>
    <string name="network_problem">No Internet Connection.</string>
    <string name="support_content">Support Content</string>
    <string name="uhOh">Uh&#45;Oh&#33;</string>
    <string name="reGrantPermissionMsg">You have denied the required permission(s). Please, grant to proceed further."</string>
    <string name="appSetting">App Setting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logoutDialog">Do you want to logout?</string>
    <string name="log">Log</string>
    <string name="out">Out</string>
    <string name="sessionExpired">Sorry your session expired please login again!!!</string>
    <string name="login">LOG IN</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="app_name_splash">Truckr</string>
    <string name="splash_msg">Your same-day delivery solution</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="welcome">Welcome to Truckr</string>
    <string name="phone_no">PHONE NUMBER</string>
    <string name="phone_no_email_hint">EMAIL/PHONE NUMBER</string>
    <string name="vehicle_pin_number">VEHICLE PIN NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_pass">FORGOT PASSWORD?</string>
    <string name="select_country">SELECT COUNTRY</string>
    <string name="fill_fields">Fill the fields</string>
    <string name="phone_miss">Enter the email or phone number</string>
    <string name="phone_mis">Enter the phone number.</string>
    <string name="password_miss">Enter the password</string>
    <string name="vehNo_miss">Enter the vehicle pin number</string>
    <string name="login_succes">Login Success</string>
    <string name="services_invalid">Service not available</string>
    <string name="login_signup_txt"><![CDATA[<font color=\'#767676\'>"Don\'t have an account?"</font><font color=\'#dc1928\'>" Signup"</font>]]></string>
    <string name="selectLanguage">Language</string>
    <string name="english">English</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="forgotMsgMob">Enter your Phone Number to receive a \n Verification Code to reset password </string>
    <string name="forgotMsgEmail">Enter your Email Address to receive a \n Link to reset password </string>
    <string name="verify_mob">Verify Mobile Number</string>
    <string name="verify_msg1">A Verification Code has been sent to</string>
    <string name="verify_msg2">Please enter the code below.</string>
    <string name="resend">RESEND CODE ?</string>
    <string name="verify">VERIFY</string>
    <string name="enter_otp">Enter a verication code</string>
    <string name="newpassmsg">Thank you for verifying your phone number,\n please create a new password below</string>
    <string name="NewPass">NEW PASSWORD</string>
    <string name="ReEnterPass">"RE-ENTER PASSWORD</string>
    <string name="passNotMactch">Password is not matching</string>
    <string name="Continue">CONTINUE</string>
    <string name="entNewPass">Enter new password</string>
    <string name="EntNewPass">Change Password</string>
    <string name="reentrPass">Re-enter the password</string>
    <string name="select_city">Select City</string>
    <string name="logout_vl">Logout</string>
    <string name="selectVeh_vl">Select Vehicle</string>
    <string name="selectVeh_vehicle_type">Select Vehicle Type</string>
    <string name="plateno_vl">Plate Number</string>
    <string name="type_vl">Type</string>
    <string name="type_select">Select type</string>
    <string name="model_vl">Model</string>
    <string name="confirm">CONFIRM</string>
    <string name="logoutmessage">Are you sure you want to log out?</string>
    <string name="selectVechicle">Select vehicle</string>
    <string name="appname_title">HERide</string>
    <string name="reg_now">register now</string>
    <string name="mandatory">This field is mandatory</string>
    <string name="Countrypicker">COUNTRY_PICKER</string>
    <string name="pass_mismatch">Password is not Matching.</string>
    <string name="signup_">Sign Up</string>
    <string name="next">NEXT</string>
    <string name="persoanl">Personal Details</string>
    <string name="fname">FIRST NAME*</string>
    <string name="lname">LAST NAME</string>
    <string name="phone_num">PHONE NUMBER*</string>
    <string name="email">EMAIL*</string>
    <string name="password_signup">PASSWORD*</string>
    <string name="password_confirm_signup">CONFIRM PASSWORD*</string>
    <string name="driving_lic">DRIVING LICENCE (both side)*</string>
    <string name="upload">"(upload both sides)*</string>
    <string name="err_fname">Please enter First Name</string>
    <string name="err_phone_no">Invalid Phone Number</string>
    <string name="err_email">Please enter Email Address</string>
    <string name="err_pass">Please enter Password</string>
    <string name="invalidEmail">Invalid Email Address</string>
    <string name="invalid_email_or_phone">Invalid Email or Phone Number</string>
    <string name="invalidPhone">Please enter a valid Phone Number</string>
    <string name="operator">Operator</string>
    <string name="free_lancer">Freelancer</string>
    <string name="choose_prof_pic">Upload Profile Image</string>
    <string name="choose_licence_img">Please upload Driving Licence</string>
    <string name="phone_reg_err">Phone  is already registered.</string>
    <string name="phone_email_reg_err">Phone and Email is already registered.</string>
    <string name="email_reg_err">Email  is already registered.</string>
    <string name="licence_miss">Upload the Licence image.</string>
    <string name="dateOfBirth">DATE OF BIRTH*</string>
    <string name="dateOfBirthError">Select Date Of Birth</string>
    <string name="defaultCountryCode">+91</string>
    <string name="selectDate">Select Date</string>
    <string name="licenceExpiry">DRIVING LICENCE EXPIRY DATE*</string>
    <string name="policeClearenceDate">BACKGROUND CHECK DATE OF ISSUE*</string>
    <string name="childrenCardExpr">CHILDREN CARD EXPIRY DATE</string>
    <string name="vehRegExpr">REGISTRATION EXPIRY DATE*</string>
    <string name="vehInsuExpr">INSURANCE EXPIRY DATE*</string>
    <string name="inspectionDate">INSPECTION DATE</string>
    <string name="goodsTransitInsu">GOODS AND TRANSIT INSURANCE EXPIRY DATE</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="plate_no">PLATE NUMBER*</string>
    <string name="color">COLOR*</string>
    <string name="type">TYPE*</string>
    <string name="services">SERVICES*</string>
    <string name="select_service">Select Services</string>
    <string name="specialities">Speciality*</string>
    <string name="make">MAKE*</string>
    <string name="make_title">MAKE</string>
    <string name="model">MODEL*</string>
    <string name="model_title">MODEL</string>
    <string name="year">YEAR*</string>
    <string name="year_title">YEAR</string>
    <string name="err_year">Invalid Year</string>
    <string name="insurance">INSURANCE (upload both sides)*</string>
    <string name="finish">FINISH</string>
    <string name="err_plate">Enter plate number</string>
    <string name="err_color">Select Color</string>
    <string name="err_type">Select Type</string>
    <string name="err_specialities">Select Speciality</string>
    <string name="select_year">Select Year</string>
    <string name="err_make">Select Make</string>
    <string name="err_model">Select Model</string>
    <string name="err_veh_img">Upload Vehicle Image</string>
    <string name="err_insurance_img">Add insurance image</string>
    <string name="signup_success_msg">Thanks for signing up. one of our representative will get in touch with you in the next 24 hours to setup your profile and get all the necessary documents</string>
    <string name="Insurance_miss">Upload the Insurance image.</string>
    <string name="certificate_miss">Upload the Certificate image.</string>
    <string name="wheelChairSupport">Wheel Chair Support</string>
    <string name="boosterSeatSupport">Booster Seat Support</string>
    <string name="extraBagsSupport">Extra Bags Support</string>
    <string name="quietRide">Quiet Ride</string>
    <string name="bikeCarrier">Bike Carrier Support</string>
    <string name="gender">GENDER*</string>
    <string-array name="colors">
        <item>White</item>
        <item>Black</item>
        <item>DarkGray</item>
        <item>LightGray</item>
        <item>Gray</item>
        <item>Red</item>
        <item>Green</item>
        <item>Navy</item>
        <item>Blue</item>
        <item>SkyBlue</item>
        <item>Turquoise</item>
        <item>BlueGreen</item>
        <item>Cyan</item>
        <item>Yellow</item>
        <item>Magenta</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Brown</item>
        <item>Silver</item>
        <item>Cerulean</item>
        <item>Lime</item>
        <item>Gold</item>
        <item>Olive</item>
        <item>Maroon</item>
        <item>Rose</item>
        <item>Pink</item>
        <item>Indigo</item>
        <item>Violet</item>
    </string-array>
    <string name="upload_doc">Upload Documents</string>
    <string name="driver_doc">Driver Documents</string>
    <string name="vehicle_doc">Vehicle Documents</string>
    <string name="vehicle_reg">VEHICLE REGISTRATION*</string>
    <string name="vehicle_insurance">VEHICLE INSURANCE*</string>
    <string name="police_clearance">Background Check*</string>
    <string name="inspection_report">INSPECTION REPORT</string>
    <string name="goodsInsurance">GOODS AND TRANSIT INSURANCE</string>
    <string name="childrenCard">WORKING WITH CHILDREN CARD</string>
    <string name="readAndAccept">I have read and accepted the</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="vehicle_pic">"vehicle_pic"</string>
    <string-array name="uploadDoc">
        <item>licence</item>
        <item>registration</item>
        <item>insurance</item>
        <item>clearance</item>
        <item>inspection</item>
        <item>goods insurance</item>
        <item>children card</item>
    </string-array>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="wallet">Wallet</string>
    <string name="message">Message</string>
    <string name="bid">"BID : "</string>
    <string name="invite">Invite</string>
    <string name="portal">Portal</string>
    <string name="bank_details">Bank</string>
    <string name="removephoto">Remove Photo</string>
    <string name="addPhotoHeader">Add Photo</string>
    <string name="takePhoto">Take Photo</string>
    <string name="cho0seFromGallery">Choose From Gallery</string>
    <string name="live_chat">Live chat</string>
    <string name="OK">OK</string>
    <string name="delete_alert">Are you sure you want to delete this Card?</string>
    <string name="alert">Alert</string>
    <string name="alert_cap">ALERT</string>
    <string name="messagealert">Message</string>
    <string name="driverMeter">Driver Meter</string>
    <string name="Services_msg">Services Required</string>
    <string name="Services_err_msg">Service Not Available</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="helpcenter">Help Center</string>
</resources>